python/testData/quickFixes/AddImportQuickFixTest/osPathFunctions/main.py
<error descr="Unresolved reference 'join'">j<caret>oin</error>